--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -20,6 +20,10 @@ env: flex
 
 service: srv1
 
+automatic_scaling:
+  min_num_instances: 1
+  max_num_instances: 10
+
 handlers:
 - url: /.*
   script: this field is required, but ignored
@@ -28,6 +32,4 @@ runtime_config:  # Optional
   jdk: openjdk8
   server: jetty9
 
-manual_scaling:
-  instances: 1
 # [END runtime]
