--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,3 @@
-// Copyright 2016 Google Inc. All Rights Reserved.
-//
-//  Licensed under the Apache License, Version 2.0 (the "License");
-//  you may not use this file except in compliance with the License.
-//  You may obtain a copy of the License at
-//
-//        http://www.apache.org/licenses/LICENSE-2.0
-//
-//  Unless required by applicable law or agreed to in writing, software
-//  distributed under the License is distributed on an "AS IS" BASIS,
-//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-//  See the License for the specific language governing permissions and
-//  limitations under the License.
 // [START gradle]
 buildscript {      // Configuration for building
   repositories {
@@ -26,12 +13,8 @@ buildscript {      // Configuration for building
 repositories {   // repositories for JARs you access in your code
   maven {
     url 'https://maven-central.storage.googleapis.com'             // Google's mirror of Maven Central
+    //  url 'https://oss.sonatype.org/content/repositories/snapshots' // SNAPSHOT repository if needed
   }
-
-//maven {
-//  url 'https://oss.sonatype.org/content/repositories/snapshots' // SNAPSHOT repository if needed
-//}
-
   jcenter()
   mavenCentral()
 }
@@ -40,13 +23,13 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'org.akhikhl.gretty'
 apply plugin: 'com.google.cloud.tools.appengine'
+apply plugin: 'eclipse'
 
 dependencies {
   providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
   // this is probably not necessary
   providedCompile 'com.google.appengine:appengine:+'
-// Add your dependencies here.
-
+  // Add your dependencies here.
 }
 
 // [START gretty]
@@ -63,6 +46,7 @@ appengine {
   deploy {   // deploy configuration
     stopPreviousVersion = true  // default - stop the current version
     promote = true              // default - & make this the current version
+    project = 'modular-buffer-165700'
   }
 
 }
