Fixed gretty bug but going to earlier version

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {      // Configuration for building
   }
   dependencies {
     classpath 'com.google.cloud.tools:appengine-gradle-plugin:+'
-    classpath 'org.akhikhl.gretty:gretty:+'
+    classpath 'org.akhikhl.gretty:gretty:1.4.0' // This is because latest gretty has a bug with "tasks", check again in the future
+    // https://github.com/akhikhl/gretty/issues/331
   }
 }
 
