--- a/build.gradle
+++ b/build.gradle
@@ -26,14 +26,8 @@ apply plugin: 'org.akhikhl.gretty'
 apply plugin: 'com.google.cloud.tools.appengine'
 apply plugin: 'eclipse'
 
-//TODO: Remove
-jar {
-    baseName = 'gs-rest-service'
-    version =  '0.1.0'
-}
-
 dependencies {
-  providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
+  //providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
   // this is probably not necessary
   providedCompile 'com.google.appengine:appengine:+'
   // Add your dependencies here.
