--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {      // Configuration for building
   }
   dependencies {
     classpath 'com.google.cloud.tools:appengine-gradle-plugin:+'
-    classpath 'org.akhikhl.gretty:gretty:1.4.0' // This is because latest gretty has a bug with "tasks", check again in the future
+    classpath 'org.akhikhl.gretty:gretty:1.4.0' // This version is because latest gretty has a bug with "tasks", check again in the future
     // https://github.com/akhikhl/gretty/issues/331
   }
 }
@@ -30,10 +30,11 @@ dependencies {
   //providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
   // this is probably not necessary
   providedCompile 'com.google.appengine:appengine:+'
-  // Add your dependencies here.
-  
+  	
+  // compile
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.5.3.RELEASE'
   
+  // test
   testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
