--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
   
   // test
   testCompile('org.springframework.boot:spring-boot-starter-test')
+
+  // swager
+  compile "io.springfox:springfox-swagger2:2.6.+"
+  // compile "io.springfox:springfox-bean-validators:2.6.+"
 }
 
 // [START gretty]
