--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
   // swager
   compile "io.springfox:springfox-swagger2:2.6.+"
-  // compile "io.springfox:springfox-bean-validators:2.6.+"
+  compile "io.springfox:springfox-bean-validators:2.6.+"
 }
 
 // [START gretty]
