--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,6 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="3.1">
-
-</web-app>
+	<context-param>
+		<param-name>spring.profiles.active</param-name>
+		<param-value>@SPRING_PROFILE@</param-value> 
+	</context-param>
+</web-app>  
