--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,7 @@ buildscript {      // Configuration for building
   }
   dependencies {
     classpath 'com.google.cloud.tools:appengine-gradle-plugin:+'
-    classpath 'org.akhikhl.gretty:gretty:1.4.0' // This version is because latest gretty has a bug with "tasks", check again in the future
-    // https://github.com/akhikhl/gretty/issues/331
+    classpath 'org.akhikhl.gretty:gretty:+'
   }
 }
 
